[tool.poetry]
name = "springer_free_books"
version = "0.1.0"
description = ""
authors = ["Vikash Kothary <kothary.vikash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pandas = "^1.0.3"
tqdm = "^4.45.0"
xlrd = "^1.2.0"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
dephell = "^0.8.2"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


